# fletApp

./: .dockerignore  .gitignore  Dockerfile  README.md  aucosticId.py  dev.sh  koyeb.yaml  pyproject.toml  render.yaml  requirements.txt  server.py  test.py  test1.py  test_fastapi.py  test_imports.py  version.py  wsgi.py
.github/scripts/: bump_version.py
.github/scripts/src/: version.py
.github/workflows/: build.yaml  build.yml  bump-version.yml  version-bump.yml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
src/: GetRadios.py  all_stations.py  app.py  appbar.py  audio_p.py  audio_player.py  bottom_appbar.py  drop_downs.py  eq.py  equalizer.py  global_model.py  increment_version.py  info_banner.py  info_txt.py  main.py  querys.py  render.yaml  requirements.txt  severs.py  snackbar.py  submit_bug.py  validate_radio.py  version.py  visualizer.py  wsgi.py
src/assets/: manifest.json
src/static/: styles.css
src/templates/: main_page_html.html
