[tool.poetry]
name = "DropDownRadio"
version = "0.1.0"
description = "DropDownRadio"
authors = ["Plamen Dimitrov <pgdimitrov@yahoo.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "assets", format = "sdist" }  # Include assets in source distribution
]

[tool.poetry.dependencies]
python = "^3.9"
flet = "0.28.3"
uvicorn = {version = "0.24.0", extras = ["standard"]}
aiohttp = "3.9.0"
aiofiles = "23.2.0"
requests = "2.31.0"
ijson = "3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.include]
assets = "assets/**/*"